Tooltip z-index fix

--- a/src/Tooltip/tooltip.css
+++ b/src/Tooltip/tooltip.css
@@ -45,6 +45,8 @@
 
     background-color:   var( --PC-WHITE );
 
+    z-index:            100;
+
     &::before
     {
         content:            "";
